--- a/style.css
+++ b/style.css
@@ -3,12 +3,23 @@ body {
 }
 
 main {
-  min-width: 100vh;
+  min-width: 100%;
   display: flex;
   align-items: center;
   flex-direction: column;
 }
 
+header h1 {
+  text-align: center;
+}
+
+section {
+  display: flex;
+  justify-content: center;
+}
+
 img {
   border-radius: 10px;
+  max-width: 100%;
+  max-height: 80%;
 }
